--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">06:30 PM</td>
+            <td data-label="Incident">Motor Vehicle Collision</td>
+            <td data-label="Street Name">PRENTER RD</td>
+            <td data-label="City">SETH</td>
+            <td data-label="Cross Streets">LITTLE JARRELLS CREEK RD (50.4 feet) and REFUSE RD (1.0 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">06:25 PM</td>
             <td data-label="Incident">Motor Vehicle Collision</td>
             <td data-label="Street Name">DANIEL BOONE PKWY</td>
