--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <td data-label="Street Name">PROTAN LN</td>
             <td data-label="City">SYLVESTER</td>
             <td data-label="Cross Streets">COAL RIVER RD (48.0 feet)</td>
-            <td data-label="Responding Agencies">Racine VFD, Whitesville VFD, Whitesville EMS, WV State Police</td>
+            <td data-label="Responding Agencies">Racine VFD, Whitesville VFD, Boone County Sheriff's Office, Whitesville EMS, WV State Police</td>
           </tr>
         
             </tbody>
