--- a/index.html
+++ b/index.html
@@ -150,12 +150,12 @@
             <tbody>
               
           <tr>
-            <td data-label="Time Reported">07:09 PM</td>
-            <td data-label="Incident">Difficulty Breathing</td>
-            <td data-label="Street Name">LEFTHAND FORK STRINGER BRANCH RD</td>
-            <td data-label="City">PEYTONA</td>
-            <td data-label="Cross Streets">STRINGER BRANCH RD (250.0 feet)</td>
-            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+            <td data-label="Time Reported">08:24 PM</td>
+            <td data-label="Incident"></td>
+            <td data-label="Street Name"></td>
+            <td data-label="City"></td>
+            <td data-label="Cross Streets"></td>
+            <td data-label="Responding Agencies"></td>
           </tr>
         
           <tr>
