--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
               
           <tr>
             <td data-label="Time Reported">08:24 PM</td>
-            <td data-label="Incident"></td>
-            <td data-label="Street Name"></td>
-            <td data-label="City"></td>
-            <td data-label="Cross Streets"></td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Incident">Motorist Assist</td>
+            <td data-label="Street Name">BOLT MT</td>
+            <td data-label="City">WHARTON</td>
+            <td data-label="Cross Streets">POND FORK RD (0.7 miles) and BOLT TOWER RD (0.8 miles)</td>
+            <td data-label="Responding Agencies">Wharton-Barrett VFD</td>
           </tr>
         
           <tr>
