--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
               
           <tr>
             <td data-label="Time Reported">10:37 PM</td>
-            <td data-label="Incident"></td>
+            <td data-label="Incident">Investigations</td>
             <td data-label="Street Name">SECOND ST</td>
             <td data-label="City">MADISON</td>
             <td data-label="Cross Streets">COAL AVE (61.9 feet) and WASHINGTON AVE (245.6 feet)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Madison VFD</td>
           </tr>
         
           <tr>
