--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
               
           <tr>
             <td data-label="Time Reported">12:21 AM</td>
-            <td data-label="Incident"></td>
+            <td data-label="Incident">MVC - Unknown</td>
             <td data-label="Street Name">SPARS CREEK RD</td>
             <td data-label="City">DANVILLE</td>
             <td data-label="Cross Streets">SPARS CREEK RD (49.0 feet)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Danville VFD, Madison VFD, Boone County Ambulance Authority, Boone County Sheriff's Office</td>
           </tr>
         
             </tbody>
