--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
               
           <tr>
             <td data-label="Time Reported">01:07 AM</td>
-            <td data-label="Incident"></td>
+            <td data-label="Incident">Call Complaintant</td>
             <td data-label="Street Name">BRADLEY RD</td>
             <td data-label="City">DANVILLE</td>
             <td data-label="Cross Streets">ROBERT C BYRD FWY SB (0.1 miles) and WILLIAMS RD (0.2 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
           </tr>
         
             </tbody>
