--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
               
           <tr>
             <td data-label="Time Reported">02:21 AM</td>
-            <td data-label="Incident"></td>
+            <td data-label="Incident">Tree Down</td>
             <td data-label="Street Name">RUCKERS ST</td>
             <td data-label="City">MADISON</td>
             <td data-label="Cross Streets">OSBORNE AVE (0.5 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Madison VFD</td>
           </tr>
         
             </tbody>
