--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">06:52 AM</td>
+            <td data-label="Incident"></td>
+            <td data-label="Street Name">LEFTHAND FORK STRINGER BRANCH RD</td>
+            <td data-label="City">PEYTONA</td>
+            <td data-label="Cross Streets">STRINGER BRANCH RD (0.1 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">06:47 AM</td>
             <td data-label="Incident">Transport to KDU</td>
             <td data-label="Street Name">KENMORE DR</td>
