--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
               
           <tr>
             <td data-label="Time Reported">06:52 AM</td>
-            <td data-label="Incident"></td>
+            <td data-label="Incident">Death</td>
             <td data-label="Street Name">LEFTHAND FORK STRINGER BRANCH RD</td>
             <td data-label="City">PEYTONA</td>
-            <td data-label="Cross Streets">STRINGER BRANCH RD (0.1 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Cross Streets">STRINGER BRANCH RD (250.0 feet)</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
           </tr>
         
           <tr>
