--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <td data-label="Street Name">LEFTHAND FORK STRINGER BRANCH RD</td>
             <td data-label="City">PEYTONA</td>
             <td data-label="Cross Streets">STRINGER BRANCH RD (250.0 feet)</td>
-            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority, Boone County Sheriff's Office</td>
           </tr>
         
           <tr>
