--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">07:48 AM</td>
+            <td data-label="Incident">MVC - Unknown</td>
+            <td data-label="Street Name">SIX MILE RD</td>
+            <td data-label="City">DANVILLE</td>
+            <td data-label="Cross Streets">TIN LN (0.0 miles) and JARRELL DR (0.3 miles)</td>
+            <td data-label="Responding Agencies">Spruce River VFD, Boone County Sheriff's Office</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">06:52 AM</td>
             <td data-label="Incident">Death</td>
             <td data-label="Street Name">LEFTHAND FORK STRINGER BRANCH RD</td>
