--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <td data-label="Street Name">LICK CREEK RD</td>
             <td data-label="City">DANVILLE</td>
             <td data-label="Cross Streets">YATES LN (0.1 miles) and FREEMONT LN (0.5 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
           </tr>
         
           <tr>
@@ -164,7 +164,7 @@
             <td data-label="Street Name">YELLOWBRUSH RD</td>
             <td data-label="City">RIDGEVIEW</td>
             <td data-label="Cross Streets">LIVE OAK DR (0.1 miles) and WILD ROSE DR (0.1 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
           </tr>
         
           <tr>
