--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">09:31 AM</td>
+            <td data-label="Incident">Unconscious</td>
+            <td data-label="Street Name"></td>
+            <td data-label="City"></td>
+            <td data-label="Cross Streets"></td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">09:11 AM</td>
             <td data-label="Incident">Chest Pain</td>
             <td data-label="Street Name">LICK CREEK RD</td>
