--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">09:53 AM</td>
+            <td data-label="Incident">Tree Down</td>
+            <td data-label="Street Name">HORSE CREEK RD</td>
+            <td data-label="City">MORRISVALE</td>
+            <td data-label="Cross Streets">DOG HOLLOW RD (197.5 feet) and BOWMAN DR (0.2 miles)</td>
+            <td data-label="Responding Agencies">Morrisvale VFD</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">09:33 AM</td>
             <td data-label="Incident">Welfare Check</td>
             <td data-label="Street Name">IRELAND CIR</td>
