--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">09:58 AM</td>
+            <td data-label="Incident">Injured Person</td>
+            <td data-label="Street Name">MIDDLE HORSE CREEK RD</td>
+            <td data-label="City">JULIAN</td>
+            <td data-label="Cross Streets">JULIAN RD (0.4 miles)</td>
+            <td data-label="Responding Agencies">Morrisvale VFD, Boone County Ambulance Authority</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">09:53 AM</td>
             <td data-label="Incident">Tree Down</td>
             <td data-label="Street Name">HORSE CREEK RD</td>
