--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
               
           <tr>
             <td data-label="Time Reported">10:21 AM</td>
-            <td data-label="Incident"></td>
+            <td data-label="Incident">Electrical Hazard</td>
             <td data-label="Street Name">ENDEAVOR DR</td>
             <td data-label="City">DANVILLE</td>
             <td data-label="Cross Streets">IRON LN (0.1 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Danville VFD</td>
           </tr>
         
           <tr>
