--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">10:39 AM</td>
+            <td data-label="Incident">Sick</td>
+            <td data-label="Street Name">HALEY DR</td>
+            <td data-label="City">DANVILLE</td>
+            <td data-label="Cross Streets">NANCY LN (204.0 feet)</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">10:21 AM</td>
             <td data-label="Incident">Interfacility Transport</td>
             <td data-label="Street Name">MADISON AVE</td>
