--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <td data-label="Street Name">HORSE CREEK RD</td>
             <td data-label="City">MORRISVALE</td>
             <td data-label="Cross Streets">PAULEY DR (0.1 miles) and HAVEN DR (0.2 miles)</td>
-            <td data-label="Responding Agencies">Morrisvale VFD, Boone County Ambulance Authority, Boone County Sheriff's Office</td>
+            <td data-label="Responding Agencies">Danville VFD, Morrisvale VFD, Boone County Ambulance Authority, Boone County Sheriff's Office</td>
           </tr>
         
           <tr>
