--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <td data-label="Street Name">SIX MILE RD</td>
             <td data-label="City">DANVILLE</td>
             <td data-label="Cross Streets">STOLLINGS BRANCH RD (112.9 feet) and GRANITE LN (130.2 feet)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
           </tr>
         
           <tr>
