--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">06:46 PM</td>
+            <td data-label="Incident">Welfare Check</td>
+            <td data-label="Street Name">CAMP CREEK RD</td>
+            <td data-label="City">JULIAN</td>
+            <td data-label="Cross Streets">NANCY DOLIN RD (0.2 miles) and MASON RD (0.4 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">04:28 PM</td>
             <td data-label="Incident">Pain</td>
             <td data-label="Street Name">WALKER HOLLOW RD</td>
