--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
               
           <tr>
             <td data-label="Time Reported">08:17 PM</td>
-            <td data-label="Incident">Pain</td>
+            <td data-label="Incident">Injured Person</td>
             <td data-label="Street Name">CAMEO RD</td>
             <td data-label="City">MORRISVALE</td>
             <td data-label="Cross Streets">TIMBER WOLF LN (0.3 miles) and WHITETAIL LN (0.3 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
           </tr>
         
           <tr>
