--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">08:43 PM</td>
+            <td data-label="Incident">Assault</td>
+            <td data-label="Street Name">DEANNA AVE</td>
+            <td data-label="City">COMFORT</td>
+            <td data-label="Cross Streets">EMILY ST (153.1 feet) and COAL RIVER RD (0.1 miles)</td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">08:17 PM</td>
             <td data-label="Incident">Injured Person</td>
             <td data-label="Street Name">CAMEO RD</td>
