--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">10:18 PM</td>
+            <td data-label="Incident">Difficulty Breathing</td>
+            <td data-label="Street Name">LITTLE HORSE CREEK RD</td>
+            <td data-label="City">JULIAN</td>
+            <td data-label="Cross Streets">SIGMON LN (0.4 miles) and BEVERLY LN (1.0 miles)</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">08:43 PM</td>
             <td data-label="Incident">Assault</td>
             <td data-label="Street Name">DEANNA AVE</td>
