--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">11:01 PM</td>
+            <td data-label="Incident">Breaking and Entering</td>
+            <td data-label="Street Name"></td>
+            <td data-label="City"></td>
+            <td data-label="Cross Streets"></td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">10:18 PM</td>
             <td data-label="Incident">Difficulty Breathing</td>
             <td data-label="Street Name">LITTLE HORSE CREEK RD</td>
