--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">11:51 PM</td>
+            <td data-label="Incident">Arrest</td>
+            <td data-label="Street Name">BENJAMIN PRICE BRIDGE RD</td>
+            <td data-label="City">MADISON</td>
+            <td data-label="Cross Streets">OFFICIAL PLZ (85.6 feet) and RIVERSIDE DR (84.6 feet)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">11:28 PM</td>
             <td data-label="Incident">Sick</td>
             <td data-label="Street Name">DANIEL BOONE PKWY</td>
