--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <td data-label="Street Name">COAL RIVER RD</td>
             <td data-label="City">RACINE</td>
             <td data-label="Cross Streets">VEALEY DR (0.0 miles) and RIVER RD (0.2 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
           </tr>
         
             </tbody>
