--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">04:28 AM</td>
+            <td data-label="Incident">Burglar Alarm - Audible</td>
+            <td data-label="Street Name">LINCOLN AVE</td>
+            <td data-label="City">MADISON</td>
+            <td data-label="Cross Streets">MAIN ST (152.4 feet) and OLD RIVER RD (0.3 miles)</td>
+            <td data-label="Responding Agencies">Madison PD</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">03:37 AM</td>
             <td data-label="Incident">Allergic Reaction</td>
             <td data-label="Street Name">COAL RIVER RD</td>
