--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
               
           <tr>
             <td data-label="Time Reported">08:52 AM</td>
-            <td data-label="Incident"></td>
+            <td data-label="Incident">Fall</td>
             <td data-label="Street Name">COAL RIVER RD</td>
             <td data-label="City">SETH</td>
             <td data-label="Cross Streets">BRANDY LN (0.1 miles) and GRAHAM LN (0.1 miles)</td>
