--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
               
           <tr>
             <td data-label="Time Reported">11:56 AM</td>
-            <td data-label="Incident"></td>
+            <td data-label="Incident">Disturbance</td>
             <td data-label="Street Name">KING AVE</td>
             <td data-label="City">MADISON</td>
             <td data-label="Cross Streets">PRICE AVE (0.1 miles) and JOHNSON AVE (32.3 feet)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Madison PD</td>
           </tr>
         
           <tr>
