--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@
               
           <tr>
             <td data-label="Time Reported">02:07 PM</td>
-            <td data-label="Incident"></td>
+            <td data-label="Incident">Investigations</td>
             <td data-label="Street Name">HURRICANE BRANCH RD</td>
             <td data-label="City">CHAPMANVILLE</td>
-            <td data-label="Cross Streets">ROBERT C BYRD FWY SB (52.9 feet)</td>
+            <td data-label="Cross Streets">ROBERT C BYRD FWY SB (0.6 miles)</td>
             <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
           </tr>
         
