--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">02:36 PM</td>
+            <td data-label="Incident"></td>
+            <td data-label="Street Name">LIBURN AVE</td>
+            <td data-label="City">BOB WHITE</td>
+            <td data-label="Cross Streets">HAROLD ST (0.1 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">02:07 PM</td>
             <td data-label="Incident">Investigations</td>
             <td data-label="Street Name">HURRICANE BRANCH RD</td>
