--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">04:32 PM</td>
+            <td data-label="Incident"></td>
+            <td data-label="Street Name">RIVERSIDE DR</td>
+            <td data-label="City">WEST MADISON</td>
+            <td data-label="Cross Streets">FOURTH AVE W (48.0 feet) and FIFTH AVE W (0.1 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">04:11 PM</td>
             <td data-label="Incident">Chest Pain</td>
             <td data-label="Street Name">LINCOLN AVE</td>
