--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">04:41 PM</td>
+            <td data-label="Incident">Fall</td>
+            <td data-label="Street Name">EMMONS RD</td>
+            <td data-label="City">ASHFORD</td>
+            <td data-label="Cross Streets">FORK CREEK RD N (0.1 miles) and PAYNE DR (0.4 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">04:32 PM</td>
             <td data-label="Incident">Assist</td>
             <td data-label="Street Name">RIVERSIDE DR</td>
