--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
               
           <tr>
             <td data-label="Time Reported">05:24 PM</td>
-            <td data-label="Incident"></td>
+            <td data-label="Incident">Assist</td>
             <td data-label="Street Name">SECOND ST W</td>
             <td data-label="City">MADISON</td>
             <td data-label="Cross Streets">FOURTH AVE W (199.5 feet) and FIFTH AVE W (0.1 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
           </tr>
         
           <tr>
