--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
               
           <tr>
             <td data-label="Time Reported">06:13 PM</td>
-            <td data-label="Incident"></td>
+            <td data-label="Incident">Call Complaintant</td>
             <td data-label="Street Name"></td>
             <td data-label="City"></td>
             <td data-label="Cross Streets"></td>
