--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <td data-label="Street Name">ROCK CREEK RD</td>
             <td data-label="City">FOSTER</td>
             <td data-label="Cross Streets">CANDY LN (0.1 miles) and BEAR WALLOW RD (0.1 miles)</td>
-            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority, Boone County Sheriff's Office</td>
           </tr>
         
           <tr>
