--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
             <td data-label="Time Reported">09:42 PM</td>
             <td data-label="Incident">Call Complaintant</td>
             <td data-label="Street Name">SIX MILE RD</td>
-            <td data-label="City">SIX MILE</td>
-            <td data-label="Cross Streets"></td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="City">DANVILLE</td>
+            <td data-label="Cross Streets">TIN LN (0.0 miles) and JARRELL DR (0.3 miles)</td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
           </tr>
         
           <tr>
