--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">10:28 PM</td>
+            <td data-label="Incident">Breaking and Entering</td>
+            <td data-label="Street Name">LICK CREEK RD</td>
+            <td data-label="City">DANVILLE</td>
+            <td data-label="Cross Streets">YATES LN (0.2 miles) and FREEMONT LN (0.4 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">09:08 PM</td>
             <td data-label="Incident">Difficulty Breathing</td>
             <td data-label="Street Name">IRELAND CIR</td>
