--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">12:38 AM</td>
+            <td data-label="Incident">Difficulty Breathing</td>
+            <td data-label="Street Name">COAL RIVER RD</td>
+            <td data-label="City">SETH</td>
+            <td data-label="Cross Streets">BANKS DR (0.2 miles) and KELLY DR (0.5 miles)</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">10:28 PM</td>
             <td data-label="Incident">Breaking and Entering</td>
             <td data-label="Street Name">LICK CREEK RD</td>
