--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">04:18 AM</td>
+            <td data-label="Incident">Fall</td>
+            <td data-label="Street Name">SHREVE DR</td>
+            <td data-label="City">DANVILLE</td>
+            <td data-label="Cross Streets">SPRUCE RIVER RD (0.1 miles)</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">02:27 AM</td>
             <td data-label="Incident">Interfacility Transport</td>
             <td data-label="Street Name">MADISON AVE</td>
