--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">05:05 AM</td>
+            <td data-label="Incident">Sick</td>
+            <td data-label="Street Name">LINCOLN AVE</td>
+            <td data-label="City">MADISON</td>
+            <td data-label="Cross Streets">MAIN ST (152.4 feet) and OLD RIVER RD (0.3 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">04:18 AM</td>
             <td data-label="Incident">Fall</td>
             <td data-label="Street Name">SHREVE DR</td>
