--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">08:08 AM</td>
+            <td data-label="Incident">Welfare Check</td>
+            <td data-label="Street Name">HURRICANE BRANCH RD</td>
+            <td data-label="City">CHAPMANVILLE</td>
+            <td data-label="Cross Streets">ROBERT C BYRD FWY SB (0.6 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">06:44 AM</td>
             <td data-label="Incident">Transport to KDU</td>
             <td data-label="Street Name">KENMORE DR</td>
