--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">09:18 AM</td>
+            <td data-label="Incident">MVC - No Injury</td>
+            <td data-label="Street Name">ASHFORD NELLIS RD</td>
+            <td data-label="City">ASHFORD</td>
+            <td data-label="Cross Streets">ICON LN (208.8 feet) and RUMBLE LN (0.1 miles)</td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">08:08 AM</td>
             <td data-label="Incident">Welfare Check</td>
             <td data-label="Street Name">HURRICANE BRANCH RD</td>
