--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">09:23 AM</td>
+            <td data-label="Incident">Chest Pain</td>
+            <td data-label="Street Name">ASHFORD LN</td>
+            <td data-label="City">ASHFORD</td>
+            <td data-label="Cross Streets">ASHFORD NELLIS RD (0.1 miles)</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">09:18 AM</td>
             <td data-label="Incident">MVC - No Injury</td>
             <td data-label="Street Name">ASHFORD NELLIS RD</td>
