--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">10:13 AM</td>
+            <td data-label="Incident">Fire - Structure</td>
+            <td data-label="Street Name">HOMESTED DR</td>
+            <td data-label="City">SHARPLES</td>
+            <td data-label="Cross Streets"></td>
+            <td data-label="Responding Agencies">Spruce River VFD</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">09:42 AM</td>
             <td data-label="Incident">Arrest</td>
             <td data-label="Street Name">STATE ST</td>
