--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">10:19 AM</td>
+            <td data-label="Incident">Sick</td>
+            <td data-label="Street Name">POND FORK RD</td>
+            <td data-label="City">BOB WHITE</td>
+            <td data-label="Cross Streets">OLD DELTA (0.1 miles) and CANE ST (0.3 miles)</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">10:13 AM</td>
             <td data-label="Incident">Fire - Structure</td>
             <td data-label="Street Name">HOMESTED DR</td>
