--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
               
           <tr>
             <td data-label="Time Reported">11:30 AM</td>
-            <td data-label="Incident">Missing Person</td>
+            <td data-label="Incident">Search & Rescue</td>
             <td data-label="Street Name">EMMA LN</td>
             <td data-label="City">FOSTER</td>
             <td data-label="Cross Streets">DOLIN HILL RD (0.1 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Danville VFD</td>
           </tr>
         
           <tr>
